edits to tax links

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1173,7 +1173,7 @@ html:lang(fr) .cnjnctn-or:before {
             <li>An Indigenous governing body or a corporation wholly owned by an Indigenous governing body</li>
 		  <li>His Majesty in right of Canada or a province or an agent of His Majesty in right of Canada or a province</li>
           </ul>
-          <p>Review tax notice:<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681155" target="_blank">UHTN1, Excluded owners</a></p>
+          <p>Review tax notice:<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681155" target="_blank"> UHTN1, Excluded owners</a></p>
           <h3 id="h_1_3">Exemption eligibility for affected owners</h3>
           <p>If you are an affected owner on December 31 you <strong>must file</strong> an Underused Housing Tax return for the calendar year, <strong>even if</strong> you qualify for an exemption.</p>
           <p>You <strong>may be exempt</strong> from <strong>paying</strong> the Underused Housing Tax for a <strong>calendar year</strong> depending on the:</p>
@@ -1192,6 +1192,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <p>Co-owner or personal representative of a deceased owner, or if the owner was deceased in the current or previous calendar year</p>
                    </li>
             </ul>
+		  <br>
 		  <p>Review tax notices:</p>
 		    <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681245" target="_blank">UHTN4, Exemptions for specified Canadian partnerships, trusts and corporations</a></p>
  <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn11/exemption-new-owners.html#_Toc122423683" target="_blank">UHTN11, Exemption for new owners</a></p>
@@ -1228,7 +1229,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <details>
                   <summary id="qual-occ">Qualifying occupancy</summary>
                   <div id="qual-occ-content">
-                    <p>To qualify for this exemption, a dwelling unit that is part of the residential property must be occupied by a qualifying occupant for <strong>one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year.
+                    <p>To qualify for this exemption, a dwelling unit that is part of the residential property must be occupied by a qualifying occupant for <strong>one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year.</p>
                   
                   
               <p>Review tax notices:</p>
@@ -1253,6 +1254,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <p>Uninhabitable for a certain number of days because of a disaster or hazardous conditions, or a renovation</p>
                  </li>
             </ul>
+		  <br>
 		  <p>Review tax notices:</p>
 		   <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn13/exemptions-new-residential-properties.html#_Toc125631183" target="_blank">UHTN13, Exemption for new residential properties</a></p>
            <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn9/exemptions-residential-properties-cannot-used-year-round.html" target="_blank">UHTN9, Exemptions for residential properties that cannot be used year-round</a></p>
