--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -355,7 +355,7 @@
 <p>You can use the employment income guidance for common employment situations to determine if the employment income is tax-exempt or partially tax-exempt.</p>
 <ol class="lst-stps-sub">
 
-<li><h4 id="step3a">Determine if the guideline 2 applies</h4>
+<li><h4 id="step3a">Determine if guideline 2 applies</h4>
 <details><summary>Your employee lives on a reserve and you are a resident on a reserve</summary>
 <p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
@@ -369,11 +369,11 @@
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee lives on a reserve <strong>and</strong> you a resident on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> live on a reserve <strong>or</strong> you are <strong>not</strong> a resident on a reserve, continue to <a href="#step3b">Step 3b - You are an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</a></li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> live on a reserve <strong>or</strong> you are <strong>not</strong> a resident on a reserve, continue to <a href="#step3b">Step 3b - Determine if guideline 4 applies</a></li>
             </ul>
 </li>
 
-<li><h4 id="step3b">Determine if the guideline 4 applies</h4>
+<li><h4 id="step3b">Determine if guideline 4 applies</h4>
 <details><summary>You are Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</summary>
 <p>Generally, the income is exempt from income tax if the employer is <strong>all </strong>of the following:</p>
 
@@ -489,12 +489,13 @@
 </details>
 </details>
 </div>
-  <p><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#step3d">Step 3d - Situation: Employee lives on a reserve or you are a resident on a reserve - Guidelines 3</a>.</p>
-</details></li>
+</details>
+<p><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#step3d">Step 3d - Determine if guideline 3 applies</a>.</p>
+</li>
 
-<li><h4 id="step3d">Determine if the guideline 3 applies</h4>
+<li><h4 id="step3d">Determine if guideline 3 applies</h4>
 <details><summary>Employee lives on a reserve or you are a resident on a reserve</summary>
-<p id="step3d">Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
+<p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
@@ -510,28 +511,31 @@
 </details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs more than 50% of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs 50% or less of their employment duties on a reserve, continue to <a href="#step3e">Step 3e - Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve</a>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs 50% or less of their employment duties on a reserve, continue to <a href="#step3e">Step 3e - Determine if guideline 1 applies</a>.</li>
             </ul>
 
 </li>
 
-<li><h4 id="step3e">Determine if the guideline 1 applies</h4>
+<li><h4 id="step3e">Determine if guideline 1 applies</h4>
 <details><summary>Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve</summary>
-<p id="step3e">Generally, the income is exempt from income tax if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
+<p>Generally, the income is exempt from income tax if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
 
 <p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
-
-<h4>Partly-exempt income - Guideline 1 (proration rule)</h4>
+</details>
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs at least 90% of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs certain duties of their employment duties on a reserve, continue to <a href="#step4">Step 3f - Calculate the proration of the employment income - Guideline 1 (propration rule).</li>
+            </ul>
+</li>
+<li><h4 id="step3f">Calculate the proration of the employment income - Guideline 1 (propration rule)</h4>
+<details><summary>Your employee performs certain duties of their employment duties on a reserve</summary>
 <p>Generally, the income is partly-exempt from income tax if your employee performs certain duties related to their employment on a reserve.</p>
 <p>The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </details>
- <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs at least 90% of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs certain duties of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</li>
-            </ul>
+<p><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</p>
 </li>
 
 </ol>
