tax notices; interactive

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -959,7 +959,8 @@ html:lang(fr) .cnjnctn-or:before {
                 You are an excluded owner</h4>
               <p>You have <strong>no obligations</strong> under the Underused Housing Tax Act. </p>
               <p>You do not have to file a return or pay the tax unless your situation changes by December 31 of the calendar year.</p>
-              <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681155" target="_blank">Excluded owners</a></p>
+		    <br>
+              <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681155" target="_blank">UHTN1, Excluded owners</a></p>
             </div>
           </div>
           <div id="unsure-owner" tabindex="0" class="hidden">
@@ -978,7 +979,8 @@ html:lang(fr) .cnjnctn-or:before {
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
                   <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax">exemption</a>.</p>
-                  <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">Affected owners</a></p>
+			<br>
+                  <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">UHTN1, Affected owners</a></p>
                 </div>
                 <br>
                 <h4 id="exempttax">Exemptions from paying the tax</h4>
@@ -1093,37 +1095,38 @@ html:lang(fr) .cnjnctn-or:before {
 		    <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                 You may qualify for an exemption from paying the tax</h4>
               <p>Indicate your exemption in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#pt4">parts 4-6 of your Underused Housing Tax return</a>.</p>
+		    <br>
               <div class="hidden" id="ex1">
-                <p class="pull-left">Read more:</p>
+                <p class="pull-left">Review tax notices:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681245" target="_blank">Exemptions for specified Canadian partnerships, trusts and corporations</a></li>
-                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn11/exemption-new-owners.html#_Toc122423683" target="_blank">Exemption for new owners</a></li>
-			<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn12/exemptions-deceased-individuals-personal-representatives-co-owners.html" target="_blank">Exemptions for deceased individuals and their personal representatives or co-owners</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681245" target="_blank">UHTH4, Exemptions for specified Canadian partnerships, trusts and corporations</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn11/exemption-new-owners.html#_Toc122423683" target="_blank">UHTN11, Exemption for new owners</a></li>
+			<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn12/exemptions-deceased-individuals-personal-representatives-co-owners.html" target="_blank">UHTN12, Exemptions for deceased individuals and their personal representatives or co-owners</a></li>
                 </ul>
                 <div class="clearfix">&nbsp;</div>
               </div>
               <div class="hidden" id="ex2">
-                <p class="pull-left">Read more:</p>
+                <p class="pull-left">Review tax notices:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn13/exemptions-new-residential-properties.html#_Toc125631183" target="_blank">Exemption for new residential properties</a></li>
-                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn9/exemptions-residential-properties-cannot-used-year-round.html" target="_blank">Exemptions for residential properties that cannot be used year-round</a></li>
-			  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn10/exemptions-uninhabitable-residential-properties.html" target="_blank">Exemptions for uninhabitable residential properties</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn13/exemptions-new-residential-properties.html#_Toc125631183" target="_blank">UHTN13, Exemption for new residential properties</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn9/exemptions-residential-properties-cannot-used-year-round.html" target="_blank">UHTN9, Exemptions for residential properties that cannot be used year-round</a></li>
+			  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn10/exemptions-uninhabitable-residential-properties.html" target="_blank">UHTN10, Exemptions for uninhabitable residential properties</a></li>
                 </ul>
                 <div class="clearfix">&nbsp;</div>
               </div>
               <div class="hidden" id="ex3">
-                <p class="pull-left">Read more:</p>
+                <p class="pull-left">Review tax notice:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank">Exemption for vacation properties</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank">UHTN5, Exemption for vacation properties</a></li>
                 </ul>
                 <div class="clearfix">&nbsp;</div>
               </div>
               <div class="hidden" id="ex4">
-                <p class="pull-left">Read more:</p>
+                <p class="pull-left">Review tax notices:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li class="hidden" id="ex4-res"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683" target="_blank">Exemption for residential properties that are used as a primary place of residence</a></li>
+                  <li class="hidden" id="ex4-res"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683" target="_blank">UHTN6, Exemption for residential properties that are used as a primary place of residence</a></li>
                  
-                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683" target="_blank">Exemption for residential properties that are used for qualifying occupancy</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683" target="_blank">UHTN7, Exemption for residential properties that are used for qualifying occupancy</a></li>
 			  
                 </ul>
                 <div class="clearfix">&nbsp;</div>
