--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -547,7 +547,7 @@
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee:</p>
 </div>
  <details><summary>Income all exempt</summary> 
-<div id="ajax-t4-how-ex-emp">
+<div id="tab1-step4a">
 	
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
@@ -572,7 +572,7 @@
   </details>
 
  <details><summary>Income partly-exempt</summary> 
-<div id="ajax-t4-how-part-emp">
+<div id="tab1-step4b">
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
