--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -368,7 +368,7 @@
 <p>Where an employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee lives on a reserve <strong>and</strong> you a resident on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee lives on a reserve <strong>and</strong> you a resident on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> live on a reserve <strong>or</strong> you are <strong>not</strong> a resident on a reserve, continue to <a href="#step3b">Step 3b - Determine if guideline 4 applies</a>.</li>
             </ul>
 </li>
@@ -393,7 +393,7 @@
 
 </details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee meets all conditions of an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee meets all conditions of an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> meet all conditions or the situation <strong>does not</strong> apply, continue to <a href="#step3c">Step 3c - Determine the percentage of duties related to employment on a reserve</a></li>
             </ul>
 
@@ -510,7 +510,7 @@
 <p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 </details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs more than 50% of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs more than 50% of their employment duties on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs 50% or less of their employment duties on a reserve, continue to <a href="#step3e">Step 3e - Determine if guideline 1 applies</a>.</li>
             </ul>
 
@@ -524,8 +524,8 @@
 <p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 </details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs at least 90% of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs certain duties of their employment duties on a reserve, continue to <a href="#step4">Step 3f - Calculate the proration of the employment income - Guideline 1 (propration rule).</a></li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs at least 90% of their employment duties on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs certain duties of their employment duties on a reserve, continue to <a href="#step3f">Step 3f - Calculate the proration of the employment income - Guideline 1 (propration rule).</a></li>
             </ul>
 </li>
 <li><h4 id="step3f">Calculate the proration of the employment income - Guideline 1 (propration rule)</h4>
@@ -535,7 +535,7 @@
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </details>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</p>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#tab1-step4b">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</p>
 </li>
 
 </ol>
