--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -399,9 +399,8 @@
 
 </li>
 
-<li><details><summary>Determine the percentage of duties related to employment on a reserve</summary>
- <div id="ajax-how-prorate">
-<p id="step3c">To determine the portion of employment duties performed on a reserve, two factors are generally taken into account:</p>
+<li><h4 id="step3c">Determine the percentage of duties related to employment on a reserve</h4>
+<p>To determine the portion of employment duties performed on a reserve, two factors are generally taken into account:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Whether an actual "duty of employment" was performed (the employee was required to perform the particular task and was compensated by the employer for performing that particular task)</li>
@@ -488,9 +487,7 @@
                   </ul>
 </details>
 </details>
-</div>
-</details>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#step3d">Step 3d - Determine if guideline 3 applies</a>.</p>
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#step3d">Step 3d - Determine if guideline 3 applies</a>.</p>
 </li>
 
 <li><h4 id="step3d">Determine if guideline 3 applies</h4>
@@ -535,7 +532,7 @@
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </details>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#tab1-step4b">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</p>
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#tab1-step4b">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</p>
 </li>
 
 </ol>
