--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -731,7 +731,7 @@
 <div id="ajax-how-self-intro">
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a slip depending on <strong>who the payment is made to</strong>:</p>
 </div>
-<h4>Payment made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</h4>
+<h4>T4 slip <small>Payment made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</small></h4>
 <div id="ajax-t4-how-self-intro">
 <p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a First Nations worker who is a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
  </div>
@@ -741,19 +741,18 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">- do not withhold</span></li> 	 
  <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
-  <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>
+  <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">- do not withhold</span></li>
  
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> if you filed Form CPT124)</small> </li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(all income)</small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(tax-exempt self-employment income)</small></li>
 </ul></li>
 </ul>
- <div data-ajax-replace="#ajax-cpp-info"></div>
+ 
 	 </div>
   </details>
 
@@ -762,28 +761,26 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">- do not withhold</span></li> 		
 <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>	
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>   
+  <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">- do not withhold</span></li>  
  </ul></li>
 
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 29 <small class="text-muted">(appropriate code)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form CPT124)</small> </li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Codes 78, 79 and 80 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed fishers</strong>)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 82 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed taxi drivers and drivers of other passenger-carrying vehicles</strong>)</small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 83 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed barbers and hairdressers</strong>)</small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(<strong>only</strong> on the tax-exempt income of the self-employed worker)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">(taxable income only)</small> </li>
 </ul></li>
 </ul>
- <div data-ajax-replace="#ajax-cpp-info"></div>
+
 	   </div>
   </details>
 
-<h4>Payment made to other self-employed workers</h4>
+<h4>T4A slip <small>Payment made to other self-employed workers</small></h4>
 <div id="ajax-t4a-how-self-intro">
   </div>
  <details><summary>Income all exempt</summary> 
