--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -789,20 +789,17 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
- <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
-  <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">- do not withhold</span></li> 		
+ <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">- do not withhold</span></li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">- do not withhold</span></li>  
  
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> if you filed Form CPT124)</small> </li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(all income)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(tax-exempt self-employment income)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small class="text-muted">(tax-exempt other income)</small></li>
 </ul></li>
 </ul>
- <div data-ajax-replace="#ajax-cpp-info"></div>
-	 </div>
+ 	 </div>
   </details>
 
  <details><summary>Income partly-exempt</summary> 
@@ -810,19 +807,19 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
-<li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>	
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>   
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">- do not withhold</span></li> 		
+ <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">- do not withhold</span></li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">- do not withhold</span></li>   
  </ul></li>
 
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form CPT124)</small> </li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(<strong>only</strong> on the tax-exempt income of the self-employed worker)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Box 028 <small class="text-muted">(<strong>only</strong> on taxable fees for services)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Box 048 <small class="text-muted">(<strong>only</strong> on taxable other income)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 144  <small class="text-muted">(tax-exempt other income)</small></li>
 </ul></li>
 </ul>
- <div data-ajax-replace="#ajax-cpp-info"></div>
+
 	   </div>
   </details>
 
