--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -731,10 +731,8 @@
 <div id="ajax-how-self-intro">
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a slip depending on <strong>who the payment is made to</strong>:</p>
 </div>
-<h4>T4 slip <small>Payment made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</small></h4>
-<div id="ajax-t4-how-self-intro">
-<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a First Nations worker who is a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
- </div>
+<h4>T4 slip - Payment made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</h4>
+<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made: </p>
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4-how-self-ex">
 
@@ -780,9 +778,8 @@
 	   </div>
   </details>
 
-<h4>T4A slip <small>Payment made to other self-employed workers</small></h4>
-<div id="ajax-t4a-how-self-intro">
-  </div>
+<h4>T4A slip - Payment made to other self-employed workers</h4>
+<p>Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made: </p>
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4a-how-self-ex">
 
