--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -549,7 +549,7 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 	 
  <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(all income)</small></li>
  <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>
 </ul></li>
@@ -739,9 +739,9 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">- do not withhold</span></li> 	 
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 	 
  <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
-  <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">- do not withhold</span></li>
+  <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>
  
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
@@ -759,9 +759,9 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">- do not withhold</span></li> 		
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 		
 <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>	
-  <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">- do not withhold</span></li>  
+  <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>  
  </ul></li>
 
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
@@ -786,9 +786,9 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">- do not withhold</span></li> 		
- <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">- do not withhold</span></li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">- do not withhold</span></li>  
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 		
+ <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">(do not withhold)</span></li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>  
  
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
@@ -804,9 +804,9 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">- do not withhold</span></li> 		
- <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">- do not withhold</span></li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">- do not withhold</span></li>   
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 		
+ <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">(do not withhold)</span></li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>   
  </ul></li>
 
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
@@ -831,36 +831,31 @@
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 <li><h3 id="tab3-step1">Determine if the non-employment income is exempt from tax</h3>
-<div id="ajax-reg-tab3">
 <p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
-
-</div>
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the non-employment income <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
 
-  <div id="ajax-notreg3">
+ 
 <p>You must deduct CPP, EI and income tax on the non-employment income, pension or superannuation, or lump-sum payments same as regular workers. </p> 
-</div></li>
+</li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span>If the non-employment income meets all conditions for the exemption, continue to <a href="#tab3-step2">Step 2 - </a>.</li>
 </ul>
  </li>
  <li><h3 id="tab3-step2">Determine the percentage of income related to non-employment on a reserve</h3>
 </li>
 <li><h3 id="tab3-step3">Withhold and report the payment on a slip</h3>
-<div id="ajax-t4-how-non-emp-intro">
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a a First Nations recipient:</p>
-</div>
-<div id="ajax-t4a-report">
+
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a First Nations recipient:</p>
  <details><summary>Income all exempt</summary> 
 <div id="ajax-t4a-how-ex">
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li> 	 
- <li><span class="fas fa-times text-danger fa-li"></span> EI </li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP </li>  
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 	 
+ <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">(do not withhold)</span></li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>  
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -871,23 +866,17 @@
 </ul></li>
 </ul>
 <p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
- </div>
   </details>
  <details><summary>Income partly-exempt</summary> 
-<div id="ajax-t4a-how-part">
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li> 	 
- <li><span class="fas fa-times text-danger fa-li"></span> EI </li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP </li>  
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 	 
+ <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">(do not withhold)</span></li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>  
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<h5>Non-employment income</h5>
-<li><span class="fas fa-check fa-li text-success"></span> Box 028 <small class="text-muted">(<strong>only</strong> on the taxable fees for services)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> Box 048 <small class="text-muted">(<strong>only</strong> on the taxable other income)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 144 <small class="text-muted">(tax-exempt other income)</small></li>
 <h5>Pension or superannuation</h5>
  <li><span class="fas fa-check fa-li text-success"></span> Box 016 <small class="text-muted">(<strong>only</strong> on the taxable pension or superannuation)</small></li>
  <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small class="text-muted">(<strong>only</strong> on the tax-exempt pension or superannuation)</small> </li>
@@ -898,12 +887,9 @@
 </ul>
 </li>
 </ul>
-<div id="ajax-t4a-explain">
 <p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
- </div>
- </div>
-  </details>
-</div>
+</details>
+
  <div data-ajax-replace="#ajax-how-t4-t4a"></div>
 </li>
 
