--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -870,7 +870,7 @@ margin-left: 38px;
     <li>Calendar year for which you are paying</li>
     <li>Your tax number
         <ul>
-            <li>Individuals: SIN, ITN or TTN</li>
+            <li>Individuals: SIN, ITN, or TTN</li>
             <li>Corporations: CRA Underused Housing Tax business number (BN-RU)</li></ul>
     </li>
 </ul></dd></dl>
