--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -591,18 +591,17 @@
 </ul></li>
 </ul>
  <div data-ajax-replace="#ajax-cpp-info"></div>
- 	
-                    
+                     
 	 </div>
   </details>
 
-<div id="ajax-how-t4-t4a">
-<p class="mrgn-tp-md">Learn more:</p>
+<div id="ajax-how-deduct-report">
+<p class="mrgn-tp-lg">Learn more:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a>  </li>
 <li class="cnjnctn-col"><span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a>  </li>
 </ul>
-	 </div>
+ </div>	 
 </li>
 
 </ol>
@@ -820,7 +819,7 @@
 	   </div>
   </details>
 
- <div data-ajax-replace="#ajax-how-t4-t4a"></div>
+<div data-ajax-replace="#ajax-how-deduct-report"></div>
 
 </li>
 
@@ -890,7 +889,7 @@
 <p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
 </details>
 
- <div data-ajax-replace="#ajax-how-t4-t4a"></div>
+<div data-ajax-replace="#ajax-how-deduct-report"></div>
 </li>
 
 </ol>
