--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -532,7 +532,7 @@
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </details>
-<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#tab1-step4b">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</p>
+<p class="mrgn-tp-xl"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#tab1-step4b">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</p>
 </li>
 
 </ol>
@@ -540,9 +540,9 @@
 
 
 <li><h3 id="step4">Withhold and report the payment on a T4 slip</h3>
-<div id="ajax-t4-how-emp-intro">
+
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee:</p>
-</div>
+
  <details><summary>Income all exempt</summary> 
 <div id="tab1-step4a">
 	
