--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -108,7 +108,7 @@
   <li><a href="#hdng13">Employer source deductions</a></li>
   <li><a href="#hdng15">Excise duties and taxes</a></li>
   <li><a href="#hdng16">Goods and services tax/Harmonized sales tax (GST/HST)</a></li>
-  <li><a href="#hdng17">Glossary</a></li>
+  <li><a href="#hdng17">Meaning of terms used</a></li>
 </ul>
 
 
@@ -571,7 +571,7 @@ In determining whether your commercial fishing business income is connected to a
     </section>
 
  
-        <h2 id="hdng16">Goods and services tax/Harmonized sales tax (GST/HST) [Updated: 2021-03-12]</h2>
+        <h2 id="hdng16">Goods and services tax/Harmonized sales tax (GST/HST)</h2>
 <p>The GST applies to most supplies of property and services made in Canada. The HST applies to most supplies of property and services in the provinces of Nova Scotia, New Brunswick, Newfoundland and Labrador, Prince Edward Island, and Ontario.</p>
 <p>Purchases of property and services by Indians may be relieved from GST/HST. For more information, see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples.html">GST/HST and Indigenous peoples</a>.</p>
 <p>Oher taxes specific to First Nations and Indigenous governments may also apply. All individuals, including Indians, have to pay these taxes if they apply. The following taxes may apply on lands governed by a First Nation or an Indigenous government:</p>
