--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -338,6 +338,7 @@
 
 <p><a href="#ajax-uncommon1" aria-controls="ajax-uncommon1" class="overlay-lnk" role="button">Examples where exempt (uncommon situations) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-uncommon2" aria-controls="ajax-uncommon2" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (uncommon situations) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example-leasing" aria-controls="ajax-example-leasing" class="overlay-lnk" role="button">Employee leasing: Tax planning arrangements (various court decisions) <span class="far fa-question-circle"></span></a> </p>
 </div>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -1081,6 +1082,11 @@
 <section id="ajax-uncommon2" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Uncommon employment income - Examples where not exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#example-uncommon-not"></div>
+	</div></section>
+
+<section id="ajax-example-leasing" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Employee leasing: Tax planning arrangements (various court decisions)</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#example-leasing"></div>
 	</div></section>
 
 
